# autocorrect-linux

./: .gitignore  README.md  installation.txt  pyproject.toml
.github/workflows/: python-package.yml
autocorrect-linux/: core.py  gui.py  main.py  utils.py
autocorrect-linux/core/: utils.py
autocorrect-linux/training/: download_dataset.ipynb  train.ipynb
autocorrect_linux/: __init__.py  main.py
autocorrect_linux/core/: core.py  gui.py  predict.py  utils.py
autocorrect_linux/training/: download_dataset.ipynb  model_vocab.npz  run_test.py  train.ipynb
