[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autocorrect-linux"
version = "0.2.0"
description = "System-wide autocorrect for Linux"
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0" 
authors = [
    {name = "simon0302010", email = "simon0302010@gmail.com"}
]
dependencies = [
    "click",
    "pynput",
#    "pyenchant",
    "requests",
    "customtkinter"
]
classifiers = [
    "Operating System :: POSIX :: Linux"
]

[project.urls]
Homepage = "https://github.com/simon0302010/autocorrect-linux"